k8s-configs/ping-cloud/base/pingaccess-was/engine/cloud-generic/statefulset.yaml
# This defines the pingaccess-was engine deployment.

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pingaccess-was
  labels:
    cluster: pingaccess-was-cluster
    role: pingaccess-was-engine
spec:
  selector:
    matchLabels:
      role: pingaccess-was-engine
  serviceName: pingaccess-was
  podManagementPolicy: OrderedReady
  template:
    metadata:
      name: pingaccess-was-engine
      labels:
        cluster: pingaccess-was-cluster
        role: pingaccess-was-engine
        pod-reaper: enabled
      annotations:
        lastUpdateReason: "NA"
    spec:
      serviceAccountName: ping-serviceaccount
      affinity:
        podAntiAffinity:
          # Add a soft requirement for each PA runtime pod to be deployed to a different AZ
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 1
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: role
                  operator: In
                  values:
                  - pingaccess-was-engine
              topologyKey: "topology.kubernetes.io/zone"
      containers:
      - name: pingaccess-was
        image: public.ecr.aws/r2h3l6e4/pingcloud-apps/pingaccess-was:v2.2.2
        securityContext:
          runAsGroup: 9999
          runAsNonRoot: true
          runAsUser: 9031
          allowPrivilegeEscalation: false
        imagePullPolicy: Always
        resources:
          requests:
            memory: "1280Mi"
            cpu: 100m
          limits:
            memory: "2560Mi"
            cpu: 1
        volumeMounts:
        - name: pingaccess-was-init
          mountPath: /opt/staging/hooks/logger.lib.sh
          subPath: logger.lib.sh
        - name: ssh-dir
          mountPath: /home/ping/.ssh
        - name: shared-dir
          mountPath: /opt/shared-dir
        - name: data-dir
          mountPath: /usr/local/bin/kubectl
          subPath: kubectl
        - name: data-dir
          mountPath: /opt/staging/newrelic.jar
          subPath: newrelic.jar
        - name: pingaccess-was-license
          mountPath: /opt/in/instance/conf/pingaccess.lic
          subPath: pingaccess.lic
        - name: license-dir
          mountPath: /opt/license
        - name: data-dir
          mountPath: /opt/staging/ds_env_vars
          subPath: ds_env_vars
        readinessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-was-engine-readiness.sh ]
          initialDelaySeconds: 0
          periodSeconds: 5
          failureThreshold: 1
          timeoutSeconds: 5
        livenessProbe:
          exec:
            command: [ /opt/staging/hooks/99-pa-was-engine-liveness.sh ]
          initialDelaySeconds: 60
          periodSeconds: 30
          failureThreshold: 3
          timeoutSeconds: 5
        lifecycle:
          preStop:
            exec:
              command:
              - /opt/staging/hooks/86-pre-stop.sh
        ports:
        - containerPort: 3000
      securityContext:
        fsGroup: 9999
      volumes:
      - name: ssh-dir
        emptyDir: {}
      - name: shared-dir
        emptyDir: {}
      - name: data-dir
        emptyDir: {}
      - name: license-dir
        emptyDir: {}
      - name: pingaccess-was-init
        configMap:
          name: pingcommon-init
          defaultMode: 0555
      - name: ssh-id-key-secret
        secret:
          secretName: ssh-id-key-secret
          optional: true
          defaultMode: 0400
      - name: known-hosts-config
        configMap:
          name: known-hosts-config
          optional: true
          defaultMode: 0644
      - name: pingaccess-was-license
        secret:
          secretName: pingaccess-was-license
          optional: true
          defaultMode: 0400
      - name: pingaccess-was-passwords
        secret:
          secretName: pingaccess-was-passwords
          optional: true
          defaultMode: 0400
