k8s-configs/ping-cloud/base/pingaccess-was/engine/cloud-generic/service.yaml
# This service exposes the pingaccess-was runtime engine ports within cluster.

apiVersion: v1
kind: Service
metadata:
  name: pingaccess-was
spec:
  ports:
  - port: 443
    name: pingaccess-was-engine
    targetPort: 3000
  selector:
    role: pingaccess-was-engine
